# SleeperAIAnalysis

./: .gitignore  CONTRIBUTING.md  FANTASY_SCORING_FIXES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sleeper-lineup-exe.py  sleeper_optimizer.spec
.github/workflows/: ci.yml
docs/: README.md
src/: __init__.py  main.py
src/api/: __init__.py  ai_providers.py  fantasy_scoring.py  sleeper.py
src/core/: __init__.py  analyzer.py  optimizer.py
src/ui/: __init__.py  cli.py
src/utils/: __init__.py  colors.py  config.py  encryption.py  logger.py
tests/: __init__.py  test_fantasy_scoring.py  test_utils.py
